--- a/TinDog/css/styles.css
+++ b/TinDog/css/styles.css
@@ -15,13 +15,14 @@ p{
   font-size: 450%;
   line-height: 1.2;
   padding-top: 10%;
-  padding-left: 20%;
+  padding-left: 10%;
+  padding-right: 10%;
   padding-bottom: 5%;
 }
-/* .btn-download1{
-  text-align: center;margin: 1rem;
+.btn-download1{
+text-align: center;
 
-} */
+}
 .Download-btn{
   margin: 1rem;
 }
