--- a/TinDog/css/styles.css
+++ b/TinDog/css/styles.css
@@ -13,11 +13,13 @@ p{
 .heading{
   font-family: 'Russo One', sans-serif;
   font-size: 450%;
-  line-height: 1.2;
-  padding-top: 10%;
+  line-height: 1.5;
+  /* padding-top: 10%;
   padding-left: 10%;
   padding-right: 10%;
-  padding-bottom: 5%;
+  padding-bottom: 5%; */
+  padding-left: 5%;
+  padding-right: 5%;
 }
 .btn-download1{
 text-align: center;
@@ -45,16 +47,18 @@ text-align: center;
 .idog{
   width: 70%;
   padding-top: 10%;
-
   transform: rotate(25deg);
   position: absolute;
   z-index: -1;
+  padding-left: 20%;
 }
+
 @media (max-width:990px) {
   .idog{
     width: 60%;
     position: static;
     transform: rotate(0);
+    padding-left: 0px;
   }
   #title{
     text-align: center;
