--- a/TinDog/css/styles.css
+++ b/TinDog/css/styles.css
@@ -160,6 +160,7 @@ text-align: center;
   text-align: center;
   padding: 80px;
   line-height: 3;
+  font-size: 200%;
 }
 .fa-icon{
   margin: 30px;
