--- a/Md5/md5.css
+++ b/Md5/md5.css
@@ -4,12 +4,14 @@ body{
    font-family: 'Oswald', sans-serif;
 }
 h1{
-  margin: 3rem;
-  text-align: center;
   font-family: 'Grandstander', cursive;
 }
 .section1{
-  margin-left: 25%;
   line-height: 2rem;
-  text-align: center;
+
+}
+.maincontent{
+  background-color: rgba(184 ,226 ,214 ,0.5);
+  margin: 5rem;
+  padding: 2rem;
 }
